--- a/index.html
+++ b/index.html
@@ -36,42 +36,44 @@
     </header>
 
     <main>
-        <div class="pages">
-            <a class='pages-user'href="">
-                <img src="assets/icons/user.png" alt="user">
-                <h5> NOME DO USUARIO </h5>
-            </a>
-            <nav class="pages-nav">
-                <a class='active' href="">
-                    <img src="assets/icons/dashboard.png" alt="dashboard">
-                    <h3>Dashboard</h3>
+        <div class="esquerdo">
+            <div class="pages">
+                <a class='pages-user'href="">
+                    <img src="assets/icons/user.png" alt="user">
+                    <h5> NOME DO USUARIO </h5>
                 </a>
-                <a href="">
-                    <img src="assets/icons/money.png" alt="finance">
-                    <h3>Finance</h3>
-                </a>
-                <a href="">
-                    <img src="assets/icons/gym.png" alt="gym">
-                    <h3>Gym</h3>
-                </a>
-                <a href="">
-                    <img src="assets/icons/checklist.png" alt="">
-                    <h3>Tasks</h3>
-                </a>
-            </nav>
+                <nav class="pages-nav">
+                    <a class='active' href="">
+                        <img src="assets/icons/dashboard.png" alt="dashboard">
+                        <h3>Dashboard</h3>
+                    </a>
+                    <a href="">
+                        <img src="assets/icons/money.png" alt="finance">
+                        <h3>Finance</h3>
+                    </a>
+                    <a href="">
+                        <img src="assets/icons/gym.png" alt="gym">
+                        <h3>Gym</h3>
+                    </a>
+                    <a href="">
+                        <img src="assets/icons/checklist.png" alt="">
+                        <h3>Tasks</h3>
+                    </a>
+                </nav>
+            </div>
         </div>
         <div class="conteudo">
-            <div class="conteudo-cima">
+            <div class="conteudo-cards">
                 <a href="">
                     <div class="titulo-dashboard">
                         <h3>Finance</h3>
                         <img src="assets/icons/lucro.png" alt="finance">
                     </div>
                     <div class="saldo">
-
+                        Saldo
                     </div>
-                    <div>
-
+                    <div >
+                        
                     </div>  
                 </a>
                 <a href="">
@@ -95,14 +97,10 @@
 
                     </div>
                 </a>
-            </div>
-            <div class="conteudo-baixo">  
                 <a href="">
-                    <div>
-                        <h3>Progress</h3>
-                    </div>
-                    <div>
-
+                    <h3>Goals progress</h3>
+                    <div class="progress-graph">
+                        <img src="assets/auxiliar/Grafico-de-Progresso-11.png" alt="">
                     </div>
                 </a>
                 <a href="">
