--- a/index.html
+++ b/index.html
@@ -69,23 +69,31 @@
                         <h3>Finance</h3>
                         <img src="assets/icons/lucro.png" alt="finance">
                     </div>
-                    <div class="saldo">
-                        Saldo
+                    <div class="inf-cards">
+                        <h4>LeftOver:</h4>
                     </div>
-                    <div >
-                        
-                    </div>  
+                    <div class="inf-cards">
+                        <h2>R$ 234.524,50</h2>
+                    </div> 
+                    <div class="inf-cards">
+                        <h3>Month Economy: <br>
+                            ------- 12% -------
+                        </h3>
+                    </div>
                 </a>
                 <a href="">
                     <div class="titulo-dashboard">
                         <h3>Gym</h3>
                         <img src="assets/icons/heart.png" alt="finance">
                     </div>
-                    <div>
-
+                    <div class="inf-cards">
+                        <h4>Workout per week:</h4><h3>4/5</h3>
                     </div>
-                    <div>
-
+                    <div class="inf-cards">
+                        <img src="assets/auxiliar/linha progresso.png" alt="">
+                    </div>
+                    <div class="inf-cards">
+                        <h5>Next: Chest, Triceps, Shoulders  </h5>
                     </div>
                 </a>
                 <a href="">
@@ -93,20 +101,38 @@
                         <h3>Tasks</h3>
                         <img src="assets/icons/check.png" alt="finance">
                     </div>
-                    <div>
-
+                    <div class="task-box">
+                        1. Clean wardrobe <br>
+                        2. Study <br>
+                        3. Workout <br>
+                        4. Practice music <br>
+                        5. Watch classes <br>
+                        6. Sleep <br>
+                        7. Go to job <br>
+                        8. Answer emails <br>
+                        9. Go to church <br>
+                        10. rehearsal <br>
                     </div>
                 </a>
                 <a href="">
-                    <h3>Goals progress</h3>
+                    <div class="titulo-dashboard">
+                        <h1></h1>
+                        <h3>Goals progress</h3>
+                        <h1></h1>
+                    </div>
+                    
                     <div class="progress-graph">
-                        <img src="assets/auxiliar/Grafico-de-Progresso-11.png" alt="">
+                        <img src="assets/auxiliar/Grafico-de-Progresso-11.png" alt="graph">
                     </div>
                 </a>
                 <a href="">
-                    <h3>Financial Progress</h3>
-                    <div>
-
+                    <div class="titulo-dashboard">
+                        <h1></h1>
+                        <h3>Financial progress</h3>
+                        <h1></h1>
+                    </div>
+                    <div class="progress-graph">
+                        <img src="assets/auxiliar/grafico de linha.png" alt="">
                     </div>
                 </a>
             </div>
