--- a/finance.html
+++ b/finance.html
@@ -30,47 +30,16 @@
             <h5>NOME DO USUARIO</h5>
         </a>
         <nav>
-            <a class="active" ><img src="assets/icons/dashboard.png"><span>Dashboard</span></a>
-            <a href="finance.html"><img src="assets/icons/money.png"><span>Finance</span></a>
+            <a href="index.html"><img src="assets/icons/dashboard.png"><span>Dashboard</span></a>
+            <a class="active"><img src="assets/icons/money.png"><span>Finance</span></a>
             <a><img src="assets/icons/gym.png"><span>Gym</span></a>
             <a><img src="assets/icons/checklist.png"><span>Tasks</span></a>
         </nav>
     </aside>
 
     <section class="cards">
-        <a class="card">
+        <a class="finance">
             <header><h3>Finance</h3><img src="assets/icons/lucro.png"></header>
-            <p>LeftOver:</p>
-            <h2>R$ 234.524,50</h2>
-            <h4>Month Economy<br>12%</h4>
-        </a>
-
-        <a class="card">
-            <header><h3>Gym</h3><img src="assets/icons/heart.png"></header>
-            <p>Workout per week: <strong>4/5</strong></p>
-            <img src="assets/auxiliar/linha progresso.png">
-            <small>Next: Chest, Triceps, Shoulders</small>
-        </a>
-
-        <a class="card">
-            <header><h3>Tasks</h3><img src="assets/icons/check.png"></header>
-            <div class="scroll">
-                1. Clean wardrobe<br>
-                2. Study<br>
-                3. Workout<br>
-                4. Practice music<br>
-                5. Watch classes
-            </div>
-        </a>
-
-        <a class="card graph">
-            <header><h3>Goals progress</h3></header>
-            <img src="assets/auxiliar/Grafico-de-Progresso-11.png">
-        </a>
-
-        <a class="card graph">
-            <header><h3>Financial progress</h3></header>
-            <img src="assets/auxiliar/grafico de linha.png">
         </a>
     </section>
 </main>
