--- a/finance.html
+++ b/finance.html
@@ -37,16 +37,58 @@
         </nav>
     </aside>
 
-    <section class="cards">
-        <a class="finance">
-            <header><h3>Finance</h3><img src="assets/icons/lucro.png"></header>
-        </a>
+    <section class="card-finance">
+        <div class="card-title">
+            <img src="assets/icons/lucro.png">
+            <h3>Finance</h3>
+        </div>
+        <div class="specific-finance">
+           <div class="specific-finance-top">
+                <section class="specific-finance-top-leftover">
+                    <div class="specific-finance-top-title">
+                        <img src="assets/icons/correto.png" alt="">
+                        <h4>LeftOver</h4>
+                    </div>
+                    <div class="specific-finance-top-values">
+                        <p>R$ 220.000,00</p>
+                    </div>
+                </section>
+                <section class="specific-finance-top-income">
+                    <div class="specific-finance-top-title">
+                        <img src="assets/icons/mais.png" alt="">
+                        <h4>Income</h4>
+                    </div>
+                    <div class="specific-finance-top-values">
+                        <p>R$ 220.000,00</p>
+                    </div>
+                </section>
+                <section class="specific-finance-top-expenses">
+                    <div class="specific-finance-top-title">
+                        <img src="assets/icons/menos.png" alt="">
+                        <h4>Expenses</h4>
+                    </div>
+                    <div class="specific-finance-top-values">
+                        <p>R$ 220.000,00</p>
+                    </div>
+                </section>
+            </div>
+            <div class="specific-finance-middle">
+                <div>
+
+                </div>
+            </div>
+            <div class="specific-finance-bottom">
+                <div>
+
+                </div>
+            </div>
+        </div>
     </section>
 </main>
 
 <footer>
-    <a href="https://github.com/yanferodrigues"><img src="assets/icons/github.png"></a>
-    <a href="https://linkedin.com"><img src="assets/icons/linkedin.png"></a>
+    <a href="https://github.com/yanferodrigues" target="_blank"><img src="assets/icons/github.png"></a>
+    <a href="https://linkedin.com" target="_blank"><img src="assets/icons/linkedin.png"></a>
 </footer>
 
 </body>
