--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 </main>
 
 <footer>
-    <a href="https://github.com/yanferodrigues"><img src="assets/icons/github.png"></a>
-    <a href="https://linkedin.com"><img src="assets/icons/linkedin.png"></a>
+    <a href="https://github.com/yanferodrigues" target="_blank"><img src="assets/icons/github.png"></a>
+    <a href="https://linkedin.com" target="_blank"><img src="assets/icons/linkedin.png"></a>
 </footer>
 
 </body>
