--- a/finance.html
+++ b/finance.html
@@ -72,13 +72,14 @@
                     </div>
                 </section>
             </div>
-            <div class="specific-finance-middle">
-                <div>
-
+            <div class="specific-finance-main">
+                <div class="specific-finance-main-left">
+                    <div class="specific-finance-main-title">
+                        <h4>Histórico</h4>
+                    </div>
+                    <img class="specific-finance-main-left-graph" src="assets/auxiliar/grafico de barras.png" alt="grafico de barras">
                 </div>
-            </div>
-            <div class="specific-finance-bottom">
-                <div>
+                <div class="specific-finance-main-right">
 
                 </div>
             </div>
