--- a/finance.html
+++ b/finance.html
@@ -50,7 +50,7 @@
                         <h4>LeftOver</h4>
                     </div>
                     <div class="specific-finance-top-values">
-                        <p>R$ 220.000,00</p>
+                        <p>$ 550,00</p>
                     </div>
                 </section>
                 <section class="specific-finance-top-income">
@@ -59,7 +59,7 @@
                         <h4>Income</h4>
                     </div>
                     <div class="specific-finance-top-values">
-                        <p>R$ 220.000,00</p>
+                        <p>$ 1.800,00</p>
                     </div>
                 </section>
                 <section class="specific-finance-top-expenses">
@@ -68,19 +68,52 @@
                         <h4>Expenses</h4>
                     </div>
                     <div class="specific-finance-top-values">
-                        <p>R$ 220.000,00</p>
+                        <p>$ 1.250,00</p>
                     </div>
                 </section>
             </div>
             <div class="specific-finance-main">
                 <div class="specific-finance-main-left">
                     <div class="specific-finance-main-title">
-                        <h4>Histórico</h4>
+                        <h4>History</h4>
                     </div>
-                    <img class="specific-finance-main-left-graph" src="assets/auxiliar/grafico de barras.png" alt="grafico de barras">
+                    <div class="specific-finance-main-left-graph">
+                        <img src="assets/auxiliar/goal graph.png" alt="goal graph">
+                        <img src="assets/auxiliar/current graph.png" alt="current graph">
+                    </div>
+                    <div class="specific-finance-main-left-history">
+                        <div class="specific-finance-main-left-history-text">
+                            <h5>Course</h5> <br>
+                            <h5>Debts</h5> <br>
+                            <h5>Food</h5> <br>
+                            <h5>Job</h5> <br>
+                            <h5>Party</h5> <br>
+                            <h5>Online sell</h5> <br>
+                            <h5>Fuel</h5> <br>
+                            <h5>Car maintenence</h5> <br>
+                        </div>
+                        <div class="specific-finance-main-left-history-value">
+                            <h5>-50</h5> <br>
+                            <h5>-100</h5> <br>
+                            <h5>-5</h5> <br>
+                            <h5>+1000</h5> <br>
+                            <h5>-50</h5> <br>
+                            <h5>+70</h5> <br>
+                            <h5>-100</h5> <br>
+                            <h5>-200</h5> <br>
+                        </div>
+                    </div>  
                 </div>
                 <div class="specific-finance-main-right">
-
+                    <button class="specific-finance-main-btn">
+                        Report Outcome
+                    </button>
+                    <button class="specific-finance-main-btn">
+                        Report Income
+                    </button>
+                    <button class="specific-finance-main-btn">
+                        Change Goal
+                    </button>
                 </div>
             </div>
         </div>
