--- a/finance.html
+++ b/finance.html
@@ -32,17 +32,17 @@
         <nav>
             <a href="index.html"><img src="assets/icons/dashboard.png"><span>Dashboard</span></a>
             <a class="active"><img src="assets/icons/money.png"><span>Finance</span></a>
-            <a><img src="assets/icons/gym.png"><span>Gym</span></a>
-            <a><img src="assets/icons/checklist.png"><span>Tasks</span></a>
+            <a href="gym.html"><img src="assets/icons/gym.png"><span>Gym</span></a>
+            <a href="tasks.html"><img src="assets/icons/checklist.png"><span>Tasks</span></a>
         </nav>
     </aside>
 
-    <section class="card-finance">
-        <div class="card-title">
+    <section class="content-box">
+        <div class="content-title">
             <img src="assets/icons/lucro.png">
             <h3>Finance</h3>
         </div>
-        <div class="specific-finance">
+        <div class="specific-content">
            <div class="specific-finance-top">
                 <section class="specific-finance-top-leftover">
                     <div class="specific-finance-top-title">
