--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <nav>
             <a class="active" ><img src="assets/icons/dashboard.png"><span>Dashboard</span></a>
             <a href="finance.html"><img src="assets/icons/money.png"><span>Finance</span></a>
-            <a><img src="assets/icons/gym.png"><span>Gym</span></a>
-            <a><img src="assets/icons/checklist.png"><span>Tasks</span></a>
+            <a href="gym.html"><img src="assets/icons/gym.png"><span>Gym</span></a>
+            <a href="tasks.html"><img src="assets/icons/checklist.png"><span>Tasks</span></a>
         </nav>
     </aside>
 
