--- a/finance.html
+++ b/finance.html
@@ -105,13 +105,13 @@
                     </div>  
                 </div>
                 <div class="specific-finance-main-right">
-                    <button class="specific-finance-main-btn">
+                    <button class="btn">
                         Report Outcome
                     </button>
-                    <button class="specific-finance-main-btn">
+                    <button class="btn">
                         Report Income
                     </button>
-                    <button class="specific-finance-main-btn">
+                    <button class="btn">
                         Change Goal
                     </button>
                 </div>
