--- a/tasks.html
+++ b/tasks.html
@@ -38,12 +38,42 @@
     </aside>
 
     <section class="content-box">
-        <div class="content-title">
+        <div class="content-title-tasks">
             <img src="assets/icons/check.png">
             <h3>Tasks</h3>
         </div>
         <div class="specific-tasks">
-            <div class="specific-tasks-today">
+            <div class="specific-tasks-main">
+                <div class="specific-tasks-main-today">
+                    <div class="specific-tasks-main-today-now">
+
+                    </div>
+                    <aside class="specific-tasks-main-today-next">
+                        <p> Task </p>
+                        <p> Task </p>
+                        <p> Task </p>
+                        <p> Task </p>
+                        <p> Task </p>
+                        <p> Task </p>
+                        <p> Task </p>
+                        <p> Task </p>
+                        <p> Task </p>
+                        <p> Task </p>
+                        <p> Task </p>
+                        <p> Task </p>
+                        
+                    </aside>
+                </div>
+                <div class="specific-tasks-main-btns">
+                    <button class="btn">
+                        Add Task
+                        <img src="assets/icons/mais.png" alt="">
+                    </button>
+                    <button class="btn">
+                        Remove task
+                        <img src="assets/icons/menos.png" alt="">
+                    </button>
+                </div>
 
             </div>
             <div class="specific-tasks-future">
