--- a/gym.html
+++ b/gym.html
@@ -43,7 +43,118 @@
             <h3>Gym</h3>
         </div>
         <div class="specific-content">
-
+            <div class="specific-gym">
+                <div class="specific-gym-days">
+                    <div class="specific-gym-days-title">
+                        MONDAY
+                    </div>
+                    <div class="specific-gym-exercices">
+                        <h4 class="specific-gym-exercices-title">Chest</h4>
+                        <div class="specific-gym-exercices-division">
+                            <p>4x12 incline bench press</p>
+                            <p>4x12 straight bench press</p>
+                            <p>4x12 crucifix</p>
+                            <p>4x12 crossover</p>
+                        </div>
+                        <h4 class="specific-gym-exercices-title">Triceps</h4>
+                        <div class="specific-gym-exercices-division">
+                            <p>4x12 triceps extension with rope</p>
+                            <p>4x12 french triceps</p>
+                            <p>4x12 tricep dipping machine</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="specific-gym-days">
+                    <div class="specific-gym-days-title">
+                        TUESDAY
+                    </div>
+                    <div class="specific-gym-exercices">
+                        <h4 class="specific-gym-exercices-title">Back</h4>
+                        <div class="specific-gym-exercices-division">
+                            <p>4x12 front pull wide</p>
+                            <p>4x12 closed front pull</p>
+                            <p>4x12 rowing</p>
+                            <p>4x12 pull-ups</p>
+                        </div>
+                        <h4 class="specific-gym-exercices-title">Biceps</h4>
+                        <div class="specific-gym-exercices-division">
+                            <p>4x12 wide grip</p>
+                            <p>4x12 narrow grip</p>
+                            <p>4x12 neutral grip</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="specific-gym-days">
+                    <div class="specific-gym-days-title">
+                        WEDNESDAY
+                    </div>
+                    <div class="specific-gym-exercices">
+                        <img src="assets/auxiliar/REST DAY.png" alt="default img rest day" >
+                    </div>
+                </div>
+                <div class="specific-gym-days">
+                    <div class="specific-gym-days-title">
+                        THURSDAY
+                    </div>
+                    <div class="specific-gym-exercices">
+                        <h4 class="specific-gym-exercices-title">Leg</h4>
+                        <div class="specific-gym-exercices-division">
+                            <p>4x12 squat</p>
+                            <p>4x12 leg press</p>
+                            <p>4x12 extension chair</p>
+                            <p>4x12 abduction chair</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="specific-gym-days">
+                    <div class="specific-gym-days-title">
+                        FRIDAY
+                    </div>
+                    <div class="specific-gym-exercices">
+                        <h4 class="specific-gym-exercices-title">Shoulders</h4>
+                        <div class="specific-gym-exercices-division">
+                            <p>4x12 lateral raises</p>
+                            <p>4x12 front raises</p>
+                            <p>4x12 shoulder press</p>
+                            <p>4x12 face pull</p>
+                        </div>
+                        <h4 class="specific-gym-exercices-title">Cardio</h4>
+                        <div class="specific-gym-exercices-division">
+                            <p>30 min treadmill</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="specific-gym-days">
+                    <div class="specific-gym-days-title">
+                        SATURDAY
+                    </div>
+                    <div class="specific-gym-exercices">
+                        <h4 class="specific-gym-exercices-title">Triceps</h4>
+                        <div class="specific-gym-exercices-division">
+                            <p>4x12 triceps extension with rope</p>
+                            <p>4x12 french triceps</p>
+                        </div>
+                        <h4 class="specific-gym-exercices-title">Biceps</h4>
+                        <div class="specific-gym-exercices-division">
+                            <p>4x12 narrow grip</p>
+                            <p>4x12 neutral grip</p>
+                        </div>
+                        <h4 class="specific-gym-exercices-title">Shoulders</h4>
+                        <div class="specific-gym-exercices-division">
+                            <p>4x12 shoulder press</p>
+                            <p>4x12 face pull</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="specific-gym-days">
+                    <div class="specific-gym-days-title">
+                        SUNDAY
+                    </div>
+                    <div class="specific-gym-exercices">
+                        <img src="assets/auxiliar/REST DAY.png" alt="default img rest day" >
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </main>
