--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <aside class="menu box">
         <a class="user">
             <img src="assets/icons/user.png">
-            <h5>NOME DO USUARIO</h5>
+            <h5>USERNAME</h5>
         </a>
         <nav>
             <a class="active" ><img src="assets/icons/dashboard.png"><span>Dashboard</span></a>
@@ -55,11 +55,16 @@
         <a class="card">
             <header><h3>Tasks</h3><img src="assets/icons/check.png"></header>
             <div class="scroll">
-                1. Clean wardrobe<br>
-                2. Study<br>
-                3. Workout<br>
-                4. Practice music<br>
-                5. Watch classes
+                <p>- Task</p>
+                <p>- Task</p>
+                <p>- Task</p>
+                <p>- Task</p>
+                <p>- Task</p>
+                <p>- Task</p>
+                <p>- Task</p>
+                <p>- Task</p>
+                <p>- Task</p>
+                <p>- Task</p>
             </div>
         </a>
 
