--- a/finance.html
+++ b/finance.html
@@ -36,87 +36,111 @@
             <a href="tasks.html"><img src="assets/icons/checklist.png"><span>Tasks</span></a>
         </nav>
     </aside>
-
+    
     <section class="content-box">
         <div class="content-title">
             <img src="assets/icons/lucro.png">
             <h3>Finance</h3>
         </div>
-        <div class="specific-content">
-           <div class="specific-finance-top">
-                <section class="specific-finance-top-leftover">
-                    <div class="specific-finance-top-title">
-                        <img src="assets/icons/correto.png" alt="">
-                        <h4>LeftOver</h4>
-                    </div>
-                    <div class="specific-finance-top-values">
-                        <p>$ 550,00</p>
-                    </div>
-                </section>
-                <section class="specific-finance-top-income">
-                    <div class="specific-finance-top-title">
-                        <img src="assets/icons/mais.png" alt="">
-                        <h4>Income</h4>
-                    </div>
-                    <div class="specific-finance-top-values">
-                        <p>$ 1.800,00</p>
-                    </div>
-                </section>
-                <section class="specific-finance-top-expenses">
-                    <div class="specific-finance-top-title">
-                        <img src="assets/icons/menos.png" alt="">
-                        <h4>Expenses</h4>
-                    </div>
-                    <div class="specific-finance-top-values">
-                        <p>$ 1.250,00</p>
-                    </div>
-                </section>
-            </div>
-            <div class="specific-finance-main">
-                <div class="specific-finance-main-left">
-                    <div class="specific-finance-main-title">
-                        <h4>History</h4>
-                    </div>
-                    <div class="specific-finance-main-left-graph">
-                        <img src="assets/auxiliar/goal graph.png" alt="goal graph">
-                        <img src="assets/auxiliar/current graph.png" alt="current graph">
-                    </div>
-                    <div class="specific-finance-main-left-history">
-                        <div class="specific-finance-main-left-history-text">
-                            <h5>Course</h5> <br>
-                            <h5>Debts</h5> <br>
-                            <h5>Food</h5> <br>
-                            <h5>Job</h5> <br>
-                            <h5>Party</h5> <br>
-                            <h5>Online sell</h5> <br>
-                            <h5>Fuel</h5> <br>
-                            <h5>Car maintenence</h5> <br>
+        
+        <section class="specific-content">
+            <section class="tabs">
+                <button class="button">Main</button>
+                <button class="button">Credit</button>
+            </section>
+            <section id="main" class="page active">   
+                <div class="specific-finance-top" >
+                    <section class="specific-finance-top-leftover">
+                        <div class="specific-finance-top-title">
+                            <img src="assets/icons/correto.png" alt="">
+                            <h4>LeftOver</h4>
                         </div>
-                        <div class="specific-finance-main-left-history-value">
-                            <h5>-50</h5> <br>
-                            <h5>-100</h5> <br>
-                            <h5>-5</h5> <br>
-                            <h5>+1000</h5> <br>
-                            <h5>-50</h5> <br>
-                            <h5>+70</h5> <br>
-                            <h5>-100</h5> <br>
-                            <h5>-200</h5> <br>
+                        <div class="specific-finance-top-values">
+                            <p>$ 550,00</p>
                         </div>
-                    </div>  
+                    </section>
+                    <section class="specific-finance-top-income">
+                        <div class="specific-finance-top-title">
+                            <img src="assets/icons/mais.png" alt="">
+                            <h4>Income</h4>
+                        </div>
+                        <div class="specific-finance-top-values">
+                            <p>$ 1.800,00</p>
+                        </div>
+                    </section>
+                    <section class="specific-finance-top-expenses">
+                        <div class="specific-finance-top-title">
+                            <img src="assets/icons/menos.png" alt="">
+                            <h4>Expenses</h4>
+                        </div>
+                        <div class="specific-finance-top-values">
+                            <p>$ 1.250,00</p>
+                        </div>
+                    </section>
                 </div>
-                <div class="specific-finance-main-right">
-                    <button class="btn">
-                        Report Outcome
-                    </button>
-                    <button class="btn">
-                        Report Income
-                    </button>
-                    <button class="btn">
-                        Change Goal
-                    </button>
+                <div class="specific-finance-main">
+                    <div class="specific-finance-main-left">
+                        <div class="specific-finance-main-title">
+                            <h4>History</h4>
+                        </div>
+                        <div class="specific-finance-main-left-graph">
+                            <img src="assets/auxiliar/goal graph.png" alt="goal graph">
+                            <img src="assets/auxiliar/current graph.png" alt="current graph">
+                        </div>
+                        <div class="specific-finance-main-left-history">
+                            <div class="specific-finance-main-left-history-text">
+                                <div class="specific-finance-main-left-history-value">
+                                    <p>Course</p>
+                                    <p>-50</p>
+                                </div>
+                                <div class="specific-finance-main-left-history-value">
+                                    <p>Debts</p>
+                                    <p>-100</p>
+                                </div>
+                                <div class="specific-finance-main-left-history-value">
+                                    <p>Food</p>
+                                    <p>-5</p>
+                                </div>
+                                <div class="specific-finance-main-left-history-value">
+                                    <p>Job</p> 
+                                    <p>+1000</p>
+                                </div>
+                                <div class="specific-finance-main-left-history-value">
+                                    <p>Party</p> 
+                                    <p>-50</p>
+                                </div>
+                                <div class="specific-finance-main-left-history-value">
+                                    <p>Online sell</p> 
+                                    <p>+70</p>
+                                </div>
+                                <div class="specific-finance-main-left-history-value">
+                                    <p>Fuel</p> 
+                                    <p>-100</p>
+                                </div>
+                                <div class="specific-finance-main-left-history-value">
+                                    <p>Car maintenence</p> 
+                                    <p>-200</p>
+                                </div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div class="specific-finance-main-right">
+                        <button class="btn">
+                            Report Outcome
+                        </button>
+                        <button class="btn">
+                            Report Income
+                        </button>
+                        <button class="btn">
+                            Change Goal
+                        </button>
+                    </div>
                 </div>
-            </div>
-        </div>
+            </section>     
+        </section>
+        <section id="credit" class="page">
+
+        </section>
     </section>
 </main>
 
