--- a/finance.html
+++ b/finance.html
@@ -154,13 +154,31 @@
                               
                         </div>  
                         <div id="finance-credit" class="finance-page">
-                            <div class="credit-cards">
-                                <div class="credit-card">
-
+                            <aside class="credit-cards">
+                                <div class="self-card">
+                                    Nubank
                                 </div>
-                            </div>
+                                <div class="self-card">
+                                    Inter
+                                </div>
+                                <div class="self-card">
+                                    Bradesco
+                                </div>
+                                <div class="self-card">
+                                    Sicredi
+                                </div>
+                                <div class="self-card">
+                                    Picpay
+                                </div>
+                                <div class="self-card">
+                                    Banco do brasil
+                                </div>
+                                <div class="self-card">
+                                    Will
+                                </div>
+                            </aside>
                             <div class="credit-cards-accounts">
-
+                                
                             </div>
                         </div> 
                     </div>
