--- a/gym.html
+++ b/gym.html
@@ -27,7 +27,7 @@
             <aside class="menu box">
                 <a class="user">
                     <img src="assets/icons/user.png">
-                    <h5>NOME DO USUARIO</h5>
+                    <h5>USERNAME</h5>
                 </a>
                 <nav>
                     <a href="index.html"><img src="assets/icons/dashboard.png"><span>Dashboard</span></a>
